Fix warnings and sonar findings